--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "dmstr/yii2-adminlte-asset":  "^2.4",
-        "cboden/ratchet": "^0.4.1"
+        "cboden/ratchet": "^0.4.1",
+        "ramsey/uuid": "^3.8"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
